Fix image hover bug
The images were acting hovered when the cursor was below them and the screen was too narrow.
Not a big deal, but just in case this doesn't get changed.

--- a/folio-app/src/components/Project.module.css
+++ b/folio-app/src/components/Project.module.css
@@ -92,6 +92,7 @@
 
 .previewContainer {
   width: 55%;
+  height: fit-content;
   box-sizing: border-box;
 }
 
